# web-midi-player

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  cloudflare-build.sh
core/: Cargo.toml
core/src/: debug.rs  lib.rs  player.rs
core/src/midi/: event.rs  mod.rs  mode_detect.rs  parser.rs  sysex.rs  tempo_map.rs
core/src/sequencer/: mod.rs  player.rs
core/src/synth/: engine.rs  gm.rs  mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc
web/public/: _headers
web/public/worklet/: synth-processor.js  text-codec-polyfill.js
web/src/: App.svelte  app.css
web/src/components/: ChannelTable.svelte  Controls.svelte  FileLoader.svelte  LogView.svelte  Segmented.svelte  Slider.svelte  Switch.svelte
web/src/lib/: channelState.ts  core.ts  gmNames.ts  logFilter.ts  persist.ts  player.ts
