[package]
name = "web-midi-player-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core MIDI parsing + SF2 synthesis (Wasm) for web-midi-player"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
